# climate-csrd-mcp

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/climate_csrd_mcp/: __init__.py  cache.py  server.py  utils.py
src/climate_csrd_mcp/data_sources/: __init__.py  auto_report.py  cbam.py  copernicus.py  crrem.py  csddd.py  de_specific.py  dwd.py  esg_rating.py  esrs_e5.py  esrs_social.py  eu_ets.py  eurlex.py  kfw.py  real_estate.py  sbti.py  tcfd.py  tnfd.py  uba.py
